--- a/A2-HTML-Responsive-Website/css/style.css
+++ b/A2-HTML-Responsive-Website/css/style.css
@@ -25,6 +25,16 @@ ul{
     color: #ffffff;
 }
 
+.dark{
+    padding: 15px;
+    background: #35424a;
+    color: #f4f4f4;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+
+}
+
     /* Header */
     header {
         background: #35424a;
@@ -112,10 +122,10 @@ ul{
         width: 250px;
     }
 
-    #boxes[
+    #boxes{
         margin-top: 20px;
 
-    ]
+    }
 
     #boxes .box{
         float:left;
@@ -127,4 +137,74 @@ ul{
 
     #boxes .box img{
         width: 90px;
+    }
+
+
+    aside#sidebar{
+        float: right;
+        width: 30%;
+        margin-top:10px;
+    }
+
+    aside#sidebar .quote input,  aside#sidebar .quote textarea{
+        width: 90%;
+        padding: 5px;
+    } 
+
+    article#main-col{
+        float: left;
+        width: 65%;
+    }
+
+    ul#services li{
+        list-style: none;
+        padding: 20 px;
+        border: #cccccc solid 1px;
+        margin-bottom: 5ps;
+        background: #e6e6e6;
+    }
+
+    footer{
+padding: 20px;
+margin-top: 20px;
+color: #ffffff;
+background-color: #e8491d;
+text-align: center;
+    }
+
+    @media(max-width: 768px){
+        header #branding,
+        header nav,
+        header nav li,
+            #newsletter h1,
+            #newsletter form,
+            #boxes .box,
+            article#main-col,
+            aside#sidebar{
+            float: none;
+        text-align: center;
+        width: 100%;
+            
+        }
+        
+        header{
+            padding-bottom: 20px;
+        }
+
+        #showcase h1{
+            margin-top: 40px;
+        }
+
+        #newsletter button, .quote buttin{
+            display: block;
+            width: 100%;
+
+        }
+
+        #newsletter form input[type="email"], .quote input, .quotetextarea{
+            width: 100%;
+            margin-bottom: 5px;
+
+        }
+        
     }
